<resources>
    <string name="app_name">Go2App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Menu Developer</string>
    <string name="developer">developer</string>
    <string name="Login_aplikasi">Silahkan Login untuk menggunakan apliksai</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="imagelogo">imagelogo</string>
</resources>