<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagelogo" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/login"
            android:text="@string/Login_aplikasi"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            />

        <EditText
            android:inputType="text"
            android:hint="@string/username"
            android:textAlignment="center"
            android:drawableStart="@drawable/person"
            android:id="@+id/username"
            android:layout_marginBottom="4dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autofillHints="username" />

        <EditText
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textAlignment="center"
            android:id="@+id/password"
            android:drawableStart="@drawable/lock"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:background="@drawable/btn_sign_in"
            android:id="@+id/btnlogin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp" />

        <TextView
            android:id="@+id/account"
            android:layout_marginTop="9dp"
            android:textAlignment="center"
            android:text="@string/create_new_account"
            android:layout_below="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </RelativeLayout>

</LinearLayout>